// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ios TitleView should render correctly with leading icon 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginEnd": 4,
          },
          Object {
            "color": "rgb(255, 255, 255)",
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
        },
        Object {
          "fontWeight": "600",
        },
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
          },
          Object {
            "lineHeight": 24,
          },
        ],
      ]
    }
  >
    Checkout
  </Text>
</View>
`;

exports[`ios TitleView should render correctly with only a title 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
        },
        Object {
          "fontWeight": "600",
        },
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
          },
          null,
        ],
      ]
    }
  >
    Backpack
  </Text>
</View>
`;

exports[`ios TitleView should render correctly with trailing icon 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
        },
        Object {
          "fontWeight": "600",
        },
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
          },
          Object {
            "lineHeight": 24,
          },
        ],
      ]
    }
  >
    Checkout
  </Text>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          Object {
            "color": "rgb(255, 255, 255)",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;
